z-index fix for select-multiselect before/after set to -1

--- a/components/pages/ui/UiSelect/Select.module.scss
+++ b/components/pages/ui/UiSelect/Select.module.scss
@@ -15,6 +15,7 @@
     inset: 0;
     position: absolute;
     transition: opacity 400ms ease-in-out;
+    z-index: -1;
   }
   &::before {
     box-shadow: var(--shadow-3d-button);
